# not-zotrading

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  server.py
source/: client.py  database.py  gui.py  project_types.py  server.py  types.py
source/backend/: database.py  middleware.py  server.py  socket_server.py
source/frontend/: client.py  gui.py
source/universal/: project_types.py
