[tool.poetry]
name = "not-zotrading"
version = "0.1.0"
description = ""
authors = ["Corey Mostero <taeyangcode@gmail.com>", "Jacob Lee <jacobseunglee@gmail.com>", "Kyuho Oh <sixsage02@gmail.com"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
socketio = "^0.2.1"
typing-extensions = "^4.5.0"
requests = "^2.28.2"
eventlet = "^0.33.3"
authlib = "^1.2.0"
firebase-admin = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
