[tool.poetry]
name = "not-zotrading"
version = "0.1.0"
description = "Definitely not zotrading."
authors = ["Corey Mostero <taeyangcode@gmail.com>", "Jacob Lee <jacobseunglee@gmail.com>", "Kyuho Oh <sixsage02@gmail.com"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/taeyangcode/not-zotrading"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
socketio = "^0.2.1"
typing-extensions = "^4.5.0"
requests = "^2.28.2"
eventlet = "^0.33.3"
authlib = "^1.2.0"
firebase-admin = "^6.1.0"
returns = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
